Fix heading spacing

--- a/src/style/Main.css
+++ b/src/style/Main.css
@@ -1,4 +1,16 @@
-.main {
+.main-top {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    max-width: 1200px;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-top: 60px;
+}
+
+.main-bottom {
     width: 100%;
     display: flex;
     align-items: center;
@@ -8,7 +20,6 @@
     margin-bottom: auto;
     margin-left: 15px;
     margin-right: 15px;
-    margin-top: 60px;
 }
 
 .main-title {
